Fix spacing issue on nav menu

--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ img {
 @media (max-width: 890px) {
     #menu {
         position: fixed;
-        top: 49px;
+        top: 48px;
         display: block;
         background-color:#f5f5f5;
         text-align: center;
